gcc/testsuite/rust/rustc/ui/pattern/suggest-adding-appropriate-missing-pattern-excluding-comments_dg.rs
//@ run-rustfix

fn main() {
    match Some(1) { // { dg-error ".E0004." "" { target *-*-* } }
        Some(1) => {}
        // hello
        Some(_) => {}
    }
}

